--- a/scss/style.scss
+++ b/scss/style.scss
@@ -15,7 +15,7 @@ $secondary: #fafafa;
 html {
     width: 100%;
     height: 100%;
-    font-family: 100% $fonts;
+    font-family: $fonts;
     font-size: 18px;
 }
 
