--- a/stylesheets/style.css
+++ b/stylesheets/style.css
@@ -178,7 +178,7 @@
 html {
   width: 100%;
   height: 100%;
-  font-family: 100% "Century Gothic", Arial, sans-serif;
+  font-family: "Century Gothic", Arial, sans-serif;
   font-size: 18px;
 }
 
