--- a/new_styles.css
+++ b/new_styles.css
@@ -48,6 +48,24 @@ body {
     border-radius: 2em;
 }
 
+#scroll-bar {
+    position: fixed;
+    top: 0.1em;
+    right: 0.1em;
+    width: 0.5em;
+    height: calc(100vh - 0.2em);
+}
+
+#scroll-handle {
+    position: absolute;
+    top: 0px;
+    width: 100%;
+    height: 10em;
+    border-radius: 0.25em;
+    background-color: rgba(127, 127, 127, 0.7);
+    cursor: pointer;
+}
+
 img.light-image.light-mode {
     filter: invert(1);
 }
@@ -151,6 +169,7 @@ img.dark-image.dark-mode {
 }
 
 .content-column {
+    width: 100%;
     display: flex;
     flex-direction: column;
     justify-content: start;
@@ -158,72 +177,90 @@ img.dark-image.dark-mode {
 }
 
 .image-carousel {
+    align-self: flex-end;
     display: flex;
     flex-direction: row;
     justify-content: center;
     align-items: center;
 }
 
+.carousel-buttons {
+    align-self: flex-end;
+    display: flex; 
+    flex-direction: row; 
+    margin-top: -10em; 
+    z-index: 100; 
+    justify-content: space-between; 
+    align-items: center;
+}
 
-
-.h1-text {
-    margin-bottom: 0.5em;
+h1, .h1-text {
+    margin: 0.25em 0px;
     font-size: 3.5rem;
+    font-weight: normal;
 }
 
-.h2-text {
-    margin-bottom: 0.5em;
-    font-size: 3rem;
-}
-
-.h3-text {
-    margin-bottom: 0.5em;
+h2, .h2-text {
+    margin: 0.25em 0px;
     font-size: 2.5rem;
+    font-weight: normal;
 }
 
-.h4-text {
-    margin-bottom: 0.5em;
+h3, .h3-text {
+    margin: 0.25em 0px;
     font-size: 1.75rem;
+    font-weight: normal;
+}
+
+h4, .h4-text {
+    margin: 0.25em 0px;
+    font-size: 1.25rem;
+    font-weight: normal;
 }
 
 .text-content {
+    width: 100%;
     margin: 1em 0px;
 }
 
-.text {
-    margin: 5px 0px 5px 0px;
+p, .text {
+    margin: 0.5em 0px;
     font-size: 1rem;
 }
 
-.h1-text.dark-mode {
+h1.dark-mode, .h1-text.dark-mode {
     color: white;
 }
 
-.h2-text.dark-mode {
+h2.dark-mode, .h2-text.dark-mode {
     color: white;
 }
 
-.h3-text.dark-mode {
+h3.dark-mode, .h3-text.dark-mode {
     color: white;
 }
 
-.h4-text.dark-mode {
+h4.dark-mode, .h4-text.dark-mode {
     color: white;
 }
 
-.text.dark-mode {
+p.dark-mode, .text.dark-mode {
     color: white;
 }
 
-.banner-content-container .h1-text {
+.banner-content-container .h1-text, .banner-content-container h1 {
     margin: 0px;
 }
 
-.banner-content-container .h2-text {
+.banner-content-container .h2-text, .banner-content-container h2 {
     margin: 0px;
 }
 
-.banner-content-container .h3-text {
+.banner-content-container .h3-text, .banner-content-container h3 {
+    margin: 0px;
+}
+
+.banner-content-container .h4-text, .banner-content-container h4 {
     margin: 0px;
 }
 
@@ -239,25 +276,65 @@ img.dark-image.dark-mode {
     margin-left: 1em;
 }
 
+.form {
+    width: 40%;
+    margin: 2em;
+    padding: 1em;
+    border-radius: 3px;
+    box-shadow: #999 0px 0px 5px 0px;
+}
+
+.form-row {
+    display: flex;
+    flex-direction: row;
+    align-items: flex-start;
+    justify-content: space-between;
+    width: 100%;
+    min-height: 2em;
+}
+
+.form-label {
+    min-width: 7em;
+    max-width: 7em;
+    margin: 0.25em 0.5em 0.25em 0px;
+    font-size: 1rem;
+}
+
+.form-input {
+    margin: 0.25em 0px;
+}
+
+@media screen and (max-width: 1800px) {
+
+    .content-box {
+        width: 85vw;
+        max-width: 85vw;
+        margin-left: 0px;
+        margin-right: 0px;
+    }
+
+    .form {
+        width: 60%;
+    }
+}
+
 @media screen and (max-width: 1200px) {
 
-    .h1-text {
+    .h1-text, h1 {
         font-size: 3rem;
     }
     
-    .h2-text {
-        font-size: 2.5rem;
+    .h2-text, h2 {
+        font-size: 2.25rem;
     }
     
-    .h3-text {
-        font-size: 1.75rem;
-    }
-
-    .h4-text {
+    .h3-text, h3 {
         font-size: 1.5rem;
     }
 
     .content-box {
+        width: 100vw;
+        max-width: 100vw;
         margin-left: 0px;
         margin-right: 0px;
     }
@@ -266,30 +343,36 @@ img.dark-image.dark-mode {
         min-height: 10em;
         min-width: 10em;
     }
+
+    .form {
+        width: 80%;
+    }
+
+    .form-row {
+        display: flex;
+        flex-direction: column;
+        align-items: flex-start;
+        justify-content: flex-start;
+    }
 }
 
 @media screen and (max-width: 900px) {
 
-    .h1-text {
+    .h1-text, h1 {
         font-size: 2.75rem;
     }
     
-    .h2-text {
-        font-size: 2.25rem;
+    .h2-text, h2 {
+        font-size: 2rem;
     }
     
-    .h3-text {
-        font-size: 1.5rem;
+    .h3-text, h3 {
+        font-size: 1.25rem;
     }
 
     .link-row {
         flex-direction: column;
         align-items: center;
-    }
-
-    .content-box {
-        width: 100vw;
-        max-width: 100vw;
     }
 
     .content-box :first-child {
@@ -302,6 +385,11 @@ img.dark-image.dark-mode {
 
     .after-image {
         margin: 1rem 1rem;
+    }
+
+    .form {
+        width: 100%;
+        margin: 2em 0px;
     }
 }
 
@@ -348,10 +436,12 @@ img.dark-image.dark-mode {
 
 .button-new {
     cursor: pointer;
+    border: 0px;
+    border-radius: 3px;
 }
 
 .link.dark-mode {
-    background: linear-gradient(135deg, #ffffff00, #161616 25%, #ffffff00);
+    background: linear-gradient(135deg, #ffffff00, #16161680 25%, #ffffff00);
     color: rgb(195, 195, 195);
     background-size: 200% 200%;
     transition: margin 0.2s, width 0.2s, height 0.2s;
@@ -383,11 +473,10 @@ img.dark-image.dark-mode {
 }
 
 .link {
-    padding: 0.5em;
+    padding: 0.25em;
     min-width: 5em;
     text-align: center;
     border-radius: 3px;
-    font-size: 18pt;
     margin-top: 0.5em;
     text-decoration: none;
     color: rgb(60, 60, 60);
@@ -408,6 +497,27 @@ img.dark-image.dark-mode {
     -webkit-animation: animation-forward 0.2s ease forwards;
     -moz-animation: animation-forward 0.2s ease forwards;
     animation: animation-forward 0.2s ease forwards;
+}
+
+.link-bar {
+    cursor: pointer;
+    width: calc(100% + 1em);
+    background: #e9e9e980;
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    align-items: center;
+    margin: 0px -0.5em;
+    padding: 0px 0.5em;
+    border-radius: 0.25em;
+}
+
+.link-bar.dark-mode {
+    background: #16161680;
+}
+
+.link-bar .fas{
+    font-size: 2em;
 }
 
 .icon-row-group * {
@@ -437,7 +547,7 @@ img.dark-image.dark-mode {
 }
 
 .icon.dark-mode {
-    background: linear-gradient(135deg, #ffffff00, #161616 25%, #ffffff00);
+    background: linear-gradient(135deg, #ffffff00, #16161680 25%, #ffffff00);
     background-size: 200% 200%;
 }
 
@@ -474,7 +584,7 @@ img.dark-image.dark-mode {
 }
 
 .link-icon.dark-mode {
-    background: linear-gradient(135deg, #ffffff00, #161616 25%, #ffffff00);
+    background: linear-gradient(135deg, #ffffff00, #16161680 25%, #ffffff00);
     background-size: 200% 200%;
 }
 
