--- a/scss/_variables.scss
+++ b/scss/_variables.scss
@@ -1,3 +1,7 @@
+$screen-width-large: 1200px;
+$screen-width-medium: 900px;
+$screen-width-small: 600px;
+
 $h1-size: 3.5rem;
 $h2-size: 2.5rem;
 $h3-size: 1.75rem;
