--- a/scss/_offsets.scss
+++ b/scss/_offsets.scss
@@ -1,145 +1,33 @@
-/*** Padding ***/
+@use 'variables';
 
-/* Pad All */
-.pas {
-    padding: 1em;
-}
+$types: padding, margin;
+$directions: top, bottom, left, right;
+$offsets: ("s": variables.$s-offset, "m": variables.$m-offset, "l": variables.$l-offset, "xl": variables.$xl-offset);
 
-.pam {
-    padding: 2em;
-}
+@each $type in $types {
+    @each $level, $value in $offsets {
+        @each $direction in $directions {
+            .#{$type}-#{$direction}-#{$level} {
+                #{$type}-#{$direction}: $value;
+            }
+        }
 
-.pal {
-    padding: 3em;
-}
+        .#{$type}-horizontal-#{$level} {
+            #{$type}: {
+                left: $value;
+                right: $value;
+            }
+        }
 
-.pax {
-    padding: 4em;
-}
+        .#{$type}-vertical-#{$level} {
+            #{$type}: {
+                top: $value;
+                bottom: $value;
+            }
+        }
 
-/* Pad Verticle */
-.pvs {
-    padding-top: 1em;
-    padding-bottom: 1em;
-}
-
-.pvm {
-    padding-top: 2em;
-    padding-bottom: 2em;
-}
-
-.pvl {
-    padding-top: 3em;
-    padding-bottom: 3em;
-}
-
-.pvx {
-    padding-top: 4em;
-    padding-bottom: 4em;
-}
-
-/* Pad Horizontal */
-.phs {
-    padding-right: 1em;
-    padding-left: 1em;
-}
-
-.phm {
-    padding-right: 2em;
-    padding-left: 2em;
-}
-
-.phl {
-    padding-right: 3em;
-    padding-left: 3em;
-}
-
-.phx {
-    padding-right: 4em;
-    padding-left: 4em;
-}
-
-/* Pad Top */
-.pts {
-    padding-top: 1em;
-}
-
-.ptm {
-    padding-top: 2em;
-}
-
-.ptl {
-    padding-top: 3em;
-}
-
-.ptx {
-    padding-top: 4em;
-}
-
-/* Pad Bottom */
-.pbs {
-    padding-bottom: 1em;
-}
-
-.pbm {
-    padding-bottom: 2em;
-}
-
-.pbl {
-    padding-bottom: 3em;
-}
-
-.pbx {
-    padding-bottom: 4em;
-}
-
-/* Pad Right */
-.prs {
-    padding-right: 1em;
-}
-
-.prm {
-    padding-right: 2em;
-}
-
-.prl {
-    padding-right: 3em;
-}
-
-.prx {
-    padding-right: 4em;
-}
-
-/* Pad Left */
-.pls {
-    padding-left: 1em;
-}
-
-.plm {
-    padding-left: 2em;
-}
-
-.pll {
-    padding-left: 3em;
-}
-
-.plx {
-    padding-left: 4em;
-}
-
-/* Margins */
-.mars {
-    margin: 1em;
-}
-
-.marm {
-    margin: 2em;
-}
-
-.marl {
-    margin: 3em;
-}
-
-.marxl {
-    margin: 4em;
+        .#{$type}-#{$level} {
+            #{$type}: $value;
+        }
+    }
 }
