--- a/scss/_variables.scss
+++ b/scss/_variables.scss
@@ -2,6 +2,11 @@ $screen-width-large: 1200px;
 $screen-width-medium: 900px;
 $screen-width-small: 600px;
 
+$s-offset: 0.25em;
+$m-offset: 0.5em;
+$l-offset: 1em;
+$xl-offset: 1.5em;
+
 $h1-size: 3.5rem;
 $h2-size: 2.5rem;
 $h3-size: 1.75rem;
