--- a/stylesheets/style.css
+++ b/stylesheets/style.css
@@ -26,149 +26,244 @@
   align-items: baseline;
 }
 
-/*** Padding ***/
-/* Pad All */
-.pas {
+.padding-top-s {
+  padding-top: 0.25em;
+}
+
+.padding-bottom-s {
+  padding-bottom: 0.25em;
+}
+
+.padding-left-s {
+  padding-left: 0.25em;
+}
+
+.padding-right-s {
+  padding-right: 0.25em;
+}
+
+.padding-horizontal-s {
+  padding-left: 0.25em;
+  padding-right: 0.25em;
+}
+
+.padding-vertical-s {
+  padding-top: 0.25em;
+  padding-bottom: 0.25em;
+}
+
+.padding-s {
+  padding: 0.25em;
+}
+
+.padding-top-m {
+  padding-top: 0.5em;
+}
+
+.padding-bottom-m {
+  padding-bottom: 0.5em;
+}
+
+.padding-left-m {
+  padding-left: 0.5em;
+}
+
+.padding-right-m {
+  padding-right: 0.5em;
+}
+
+.padding-horizontal-m {
+  padding-left: 0.5em;
+  padding-right: 0.5em;
+}
+
+.padding-vertical-m {
+  padding-top: 0.5em;
+  padding-bottom: 0.5em;
+}
+
+.padding-m {
+  padding: 0.5em;
+}
+
+.padding-top-l {
+  padding-top: 1em;
+}
+
+.padding-bottom-l {
+  padding-bottom: 1em;
+}
+
+.padding-left-l {
+  padding-left: 1em;
+}
+
+.padding-right-l {
+  padding-right: 1em;
+}
+
+.padding-horizontal-l {
+  padding-left: 1em;
+  padding-right: 1em;
+}
+
+.padding-vertical-l {
+  padding-top: 1em;
+  padding-bottom: 1em;
+}
+
+.padding-l {
   padding: 1em;
 }
 
-.pam {
-  padding: 2em;
+.padding-top-xl {
+  padding-top: 1.5em;
 }
 
-.pal {
-  padding: 3em;
+.padding-bottom-xl {
+  padding-bottom: 1.5em;
 }
 
-.pax {
-  padding: 4em;
+.padding-left-xl {
+  padding-left: 1.5em;
 }
 
-/* Pad Verticle */
-.pvs {
-  padding-top: 1em;
-  padding-bottom: 1em;
+.padding-right-xl {
+  padding-right: 1.5em;
 }
 
-.pvm {
-  padding-top: 2em;
-  padding-bottom: 2em;
+.padding-horizontal-xl {
+  padding-left: 1.5em;
+  padding-right: 1.5em;
 }
 
-.pvl {
-  padding-top: 3em;
-  padding-bottom: 3em;
+.padding-vertical-xl {
+  padding-top: 1.5em;
+  padding-bottom: 1.5em;
 }
 
-.pvx {
-  padding-top: 4em;
-  padding-bottom: 4em;
+.padding-xl {
+  padding: 1.5em;
 }
 
-/* Pad Horizontal */
-.phs {
-  padding-right: 1em;
-  padding-left: 1em;
+.margin-top-s {
+  margin-top: 0.25em;
 }
 
-.phm {
-  padding-right: 2em;
-  padding-left: 2em;
+.margin-bottom-s {
+  margin-bottom: 0.25em;
 }
 
-.phl {
-  padding-right: 3em;
-  padding-left: 3em;
+.margin-left-s {
+  margin-left: 0.25em;
 }
 
-.phx {
-  padding-right: 4em;
-  padding-left: 4em;
+.margin-right-s {
+  margin-right: 0.25em;
 }
 
-/* Pad Top */
-.pts {
-  padding-top: 1em;
+.margin-horizontal-s {
+  margin-left: 0.25em;
+  margin-right: 0.25em;
 }
 
-.ptm {
-  padding-top: 2em;
+.margin-vertical-s {
+  margin-top: 0.25em;
+  margin-bottom: 0.25em;
 }
 
-.ptl {
-  padding-top: 3em;
+.margin-s {
+  margin: 0.25em;
 }
 
-.ptx {
-  padding-top: 4em;
+.margin-top-m {
+  margin-top: 0.5em;
 }
 
-/* Pad Bottom */
-.pbs {
-  padding-bottom: 1em;
+.margin-bottom-m {
+  margin-bottom: 0.5em;
 }
 
-.pbm {
-  padding-bottom: 2em;
+.margin-left-m {
+  margin-left: 0.5em;
 }
 
-.pbl {
-  padding-bottom: 3em;
+.margin-right-m {
+  margin-right: 0.5em;
 }
 
-.pbx {
-  padding-bottom: 4em;
+.margin-horizontal-m {
+  margin-left: 0.5em;
+  margin-right: 0.5em;
 }
 
-/* Pad Right */
-.prs {
-  padding-right: 1em;
+.margin-vertical-m {
+  margin-top: 0.5em;
+  margin-bottom: 0.5em;
 }
 
-.prm {
-  padding-right: 2em;
+.margin-m {
+  margin: 0.5em;
 }
 
-.prl {
-  padding-right: 3em;
+.margin-top-l {
+  margin-top: 1em;
 }
 
-.prx {
-  padding-right: 4em;
+.margin-bottom-l {
+  margin-bottom: 1em;
 }
 
-/* Pad Left */
-.pls {
-  padding-left: 1em;
+.margin-left-l {
+  margin-left: 1em;
 }
 
-.plm {
-  padding-left: 2em;
+.margin-right-l {
+  margin-right: 1em;
 }
 
-.pll {
-  padding-left: 3em;
+.margin-horizontal-l {
+  margin-left: 1em;
+  margin-right: 1em;
 }
 
-.plx {
-  padding-left: 4em;
+.margin-vertical-l {
+  margin-top: 1em;
+  margin-bottom: 1em;
 }
 
-/* Margins */
-.mars {
+.margin-l {
   margin: 1em;
 }
 
-.marm {
-  margin: 2em;
+.margin-top-xl {
+  margin-top: 1.5em;
 }
 
-.marl {
-  margin: 3em;
+.margin-bottom-xl {
+  margin-bottom: 1.5em;
 }
 
-.marxl {
-  margin: 4em;
+.margin-left-xl {
+  margin-left: 1.5em;
+}
+
+.margin-right-xl {
+  margin-right: 1.5em;
+}
+
+.margin-horizontal-xl {
+  margin-left: 1.5em;
+  margin-right: 1.5em;
+}
+
+.margin-vertical-xl {
+  margin-top: 1.5em;
+  margin-bottom: 1.5em;
+}
+
+.margin-xl {
+  margin: 1.5em;
 }
 
 h1.dark-mode, .h1-text.dark-mode, h1, .h1-text {
