--- a/scss/style.scss
+++ b/scss/style.scss
@@ -1,6 +1,6 @@
 @use 'variables';
 @use 'offsets';
-@use 'flex';
+@use 'layout';
 @use 'text';
 
 * {
@@ -16,6 +16,7 @@ html {
 
 body {
     width: 100%;
+    height: 100%;
     min-height: 100%;
     margin: 0px;
     background: variables.$primary;
