Better layout styles

--- a/scss/_layout.scss
+++ b/scss/_layout.scss
@@ -8,74 +8,6 @@
     flex-grow: $grow;
 }
 
-.flex, .center {
-    @include flex(column, center, center);
-}
-
-.flex-column {
-    @include flex(column, space-between, center);
-
-    &-start {
-        @include flex(column, flex-start, center);
-
-        &-left {
-            @include flex(column, flex-start, flex-start);
-        }
-    
-        &-right {
-            @include flex(column, flex-start, flex-end);
-        }
-    }
-
-    &-center {
-        @include flex(column, center, center);
-
-        &-left {
-            @include flex(column, center, flex-start);
-        }
-    
-        &-right {
-            @include flex(column, center, flex-end);
-        }
-    }
-
-    &-end {
-        @include flex(column, flex-end, center);
-
-        &-left {
-            @include flex(column, flex-end, flex-start);
-        }
-    
-        &-right {
-            @include flex(column, flex-end, flex-end);
-        }
-    }
-
-    &-left {
-        @include flex(column, space-between, flex-start);
-    }
-
-    &-right {
-        @include flex(column, space-between, flex-end);
-    }
-}
-
-.flex-row {
-    @include flex(row, space-between, center);
-
-    &-start {
-        @include flex(row, flex-start, center);
-    }
-
-    &-top {
-        @include flex(row, space-between, flex-start);
-    }
-
-    &-bottom {
-        @include flex(row, space-between, flex-end);
-    }
-}
-
 .content-column {
     height: 100%;
     background-color: variables.$primary;
@@ -91,5 +23,113 @@
 
     &.dark {
         background-color: variables.$secondary;
+    }
+}
+
+@mixin flex-column($justify, $align, $grow: 1) {
+    @include flex(column, $justify, $align, $grow);
+    @extend .content-column;
+}
+
+@mixin flex-row($justify, $align, $grow: 1) {
+    @include flex(row, $justify, $align, $grow);
+    @extend .content-row;
+}
+
+.flex, .center {
+    @include flex(column, center, center);
+}
+
+.flex-column {
+    @include flex-column(space-between, center);
+
+    &-start {
+        @include flex-column(flex-start, center);
+
+        &-left {
+            @include flex-column(flex-start, flex-start);
+        }
+    
+        &-right {
+            @include flex-column(flex-start, flex-end);
+        }
+    }
+
+    &-center {
+        @include flex-column(center, center);
+
+        &-left {
+            @include flex-column(center, flex-start);
+        }
+    
+        &-right {
+            @include flex-column(center, flex-end);
+        }
+    }
+
+    &-end {
+        @include flex-column(flex-end, center);
+
+        &-left {
+            @include flex-column(flex-end, flex-start);
+        }
+    
+        &-right {
+            @include flex-column(flex-end, flex-end);
+        }
+    }
+
+    &-left {
+        @include flex-column(space-between, flex-start);
+    }
+
+    &-right {
+        @include flex-column(space-between, flex-end);
+    }
+}
+
+.flex-row {
+    @include flex-row(space-between, center);
+
+    &-start {
+        @include flex-row(flex-start, center);
+    }
+
+    &-center {
+        @include flex-row(center, center);
+
+        &-top {
+            @include flex-row(center, flex-start);
+        }
+    
+        &-bottom {
+            @include flex-row(center, flex-end);
+        }
+    }
+
+    &-end {
+        @include flex-row(flex-end, center);
+
+        &-top {
+            @include flex-row(flex-end, flex-start);
+        }
+    
+        &-bottom {
+            @include flex-row(flex-end, flex-end);
+        }
+    }
+
+    &-top {
+        @include flex-row(space-between, flex-start);
+    }
+
+    &-bottom {
+        @include flex-row(space-between, flex-end);
+    }
+}
+
+@each $value in 0, 1, 2, 3, 4, 5 {
+    .flex-grow-#{$value} {
+        flex-grow: #{$value};
     }
 }
