--- a/stylesheets/style.css
+++ b/stylesheets/style.css
@@ -238,6 +238,22 @@
   margin: 1.5em;
 }
 
+.content-column, .flex-column-right, .flex-column-left, .flex-column-end-right, .flex-column-end-left, .flex-column-end, .flex-column-center-right, .flex-column-center-left, .flex-column-center, .flex-column-start-right, .flex-column-start-left, .flex-column-start, .flex-column {
+  height: 100%;
+  background-color: #fafafa;
+}
+.content-column.dark, .dark.flex-column-right, .dark.flex-column-left, .dark.flex-column-end-right, .dark.flex-column-end-left, .dark.flex-column-end, .dark.flex-column-center-right, .dark.flex-column-center-left, .dark.flex-column-center, .dark.flex-column-start-right, .dark.flex-column-start-left, .dark.flex-column-start, .dark.flex-column {
+  background-color: #050505;
+}
+
+.content-row, .flex-row-bottom, .flex-row-top, .flex-row-end-bottom, .flex-row-end-top, .flex-row-end, .flex-row-center-bottom, .flex-row-center-top, .flex-row-center, .flex-row-start, .flex-row {
+  width: 100%;
+  background-color: #fafafa;
+}
+.content-row.dark, .dark.flex-row-bottom, .dark.flex-row-top, .dark.flex-row-end-bottom, .dark.flex-row-end-top, .dark.flex-row-end, .dark.flex-row-center-bottom, .dark.flex-row-center-top, .dark.flex-row-center, .dark.flex-row-start, .dark.flex-row {
+  background-color: #050505;
+}
+
 .flex, .center {
   display: flex;
   flex-direction: column;
@@ -345,6 +361,48 @@
   align-items: center;
   flex-grow: 1;
 }
+.flex-row-center {
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  align-items: center;
+  flex-grow: 1;
+}
+.flex-row-center-top {
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  align-items: flex-start;
+  flex-grow: 1;
+}
+.flex-row-center-bottom {
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  align-items: flex-end;
+  flex-grow: 1;
+}
+.flex-row-end {
+  display: flex;
+  flex-direction: row;
+  justify-content: flex-end;
+  align-items: center;
+  flex-grow: 1;
+}
+.flex-row-end-top {
+  display: flex;
+  flex-direction: row;
+  justify-content: flex-end;
+  align-items: flex-start;
+  flex-grow: 1;
+}
+.flex-row-end-bottom {
+  display: flex;
+  flex-direction: row;
+  justify-content: flex-end;
+  align-items: flex-end;
+  flex-grow: 1;
+}
 .flex-row-top {
   display: flex;
   flex-direction: row;
@@ -360,20 +418,28 @@
   flex-grow: 1;
 }
 
-.content-column {
-  height: 100%;
-  background-color: #fafafa;
-}
-.content-column.dark {
-  background-color: #050505;
+.flex-grow-0 {
+  flex-grow: 0;
 }
 
-.content-row {
-  width: 100%;
-  background-color: #fafafa;
+.flex-grow-1 {
+  flex-grow: 1;
 }
-.content-row.dark {
-  background-color: #050505;
+
+.flex-grow-2 {
+  flex-grow: 2;
+}
+
+.flex-grow-3 {
+  flex-grow: 3;
+}
+
+.flex-grow-4 {
+  flex-grow: 4;
+}
+
+.flex-grow-5 {
+  flex-grow: 5;
 }
 
 p, .text {
