--- a/stylesheets/style.css
+++ b/stylesheets/style.css
@@ -759,6 +759,77 @@ h4.dark, .h4-text.dark {
   box-shadow: gray -5px 0px 7px 0px;
 }
 
+.gradient, .gradient-hover-animation {
+  background: linear-gradient(135deg, #ffffff00, #e9e9e980 25%, #ffffff00);
+}
+.gradient.dark, .dark.gradient-hover-animation {
+  background: linear-gradient(135deg, #ffffff00, #161616 25%, #ffffff00);
+}
+
+.gradient-hover-animation {
+  background-size: 200% 200%;
+  -webkit-animation: animation-back 0.2s ease forwards;
+  -moz-animation: animation-back 0.2s ease forwards;
+  animation: animation-back 0.2s ease forwards;
+}
+.gradient-hover-animation.dark {
+  background-size: 200% 200%;
+}
+
+.gradient-hover-animation:hover {
+  -webkit-animation: animation-forward 0.2s ease forwards;
+  -moz-animation: animation-forward 0.2s ease forwards;
+  animation: animation-forward 0.2s ease forwards;
+}
+
+@-webkit-keyframes animation-forward {
+  0% {
+    background-position: 0% 0%;
+  }
+  100% {
+    background-position: 100% 100%;
+  }
+}
+@-moz-keyframes animation-forward {
+  0% {
+    background-position: 0% 0%;
+  }
+  100% {
+    background-position: 100% 100%;
+  }
+}
+@keyframes animation-forward {
+  0% {
+    background-position: 0% 0%;
+  }
+  100% {
+    background-position: 100% 100%;
+  }
+}
+@-webkit-keyframes animation-back {
+  0% {
+    background-position: 100% 100%;
+  }
+  100% {
+    background-position: 0% 0%;
+  }
+}
+@-moz-keyframes animation-back {
+  0% {
+    background-position: 100% 100%;
+  }
+  100% {
+    background-position: 0% 0%;
+  }
+}
+@keyframes animation-back {
+  0% {
+    background-position: 100% 100%;
+  }
+  100% {
+    background-position: 0% 0%;
+  }
+}
 * {
   box-sizing: border-box;
 }
