--- a/stylesheets/style.css
+++ b/stylesheets/style.css
@@ -118,6 +118,156 @@
   padding: 2em;
 }
 
+.padding-top-1 {
+  padding-top: 1em;
+}
+
+.padding-bottom-1 {
+  padding-bottom: 1em;
+}
+
+.padding-left-1 {
+  padding-left: 1em;
+}
+
+.padding-right-1 {
+  padding-right: 1em;
+}
+
+.padding-horizontal-1 {
+  padding-left: 1em;
+  padding-right: 1em;
+}
+
+.padding-vertical-1 {
+  padding-top: 1em;
+  padding-bottom: 1em;
+}
+
+.padding-1 {
+  padding: 1em;
+}
+
+.padding-top-2 {
+  padding-top: 2em;
+}
+
+.padding-bottom-2 {
+  padding-bottom: 2em;
+}
+
+.padding-left-2 {
+  padding-left: 2em;
+}
+
+.padding-right-2 {
+  padding-right: 2em;
+}
+
+.padding-horizontal-2 {
+  padding-left: 2em;
+  padding-right: 2em;
+}
+
+.padding-vertical-2 {
+  padding-top: 2em;
+  padding-bottom: 2em;
+}
+
+.padding-2 {
+  padding: 2em;
+}
+
+.padding-top-3 {
+  padding-top: 3em;
+}
+
+.padding-bottom-3 {
+  padding-bottom: 3em;
+}
+
+.padding-left-3 {
+  padding-left: 3em;
+}
+
+.padding-right-3 {
+  padding-right: 3em;
+}
+
+.padding-horizontal-3 {
+  padding-left: 3em;
+  padding-right: 3em;
+}
+
+.padding-vertical-3 {
+  padding-top: 3em;
+  padding-bottom: 3em;
+}
+
+.padding-3 {
+  padding: 3em;
+}
+
+.padding-top-4 {
+  padding-top: 4em;
+}
+
+.padding-bottom-4 {
+  padding-bottom: 4em;
+}
+
+.padding-left-4 {
+  padding-left: 4em;
+}
+
+.padding-right-4 {
+  padding-right: 4em;
+}
+
+.padding-horizontal-4 {
+  padding-left: 4em;
+  padding-right: 4em;
+}
+
+.padding-vertical-4 {
+  padding-top: 4em;
+  padding-bottom: 4em;
+}
+
+.padding-4 {
+  padding: 4em;
+}
+
+.padding-top-5 {
+  padding-top: 5em;
+}
+
+.padding-bottom-5 {
+  padding-bottom: 5em;
+}
+
+.padding-left-5 {
+  padding-left: 5em;
+}
+
+.padding-right-5 {
+  padding-right: 5em;
+}
+
+.padding-horizontal-5 {
+  padding-left: 5em;
+  padding-right: 5em;
+}
+
+.padding-vertical-5 {
+  padding-top: 5em;
+  padding-bottom: 5em;
+}
+
+.padding-5 {
+  padding: 5em;
+}
+
 .margin-top-s {
   margin-top: 0.5em;
 }
@@ -236,6 +386,156 @@
 
 .margin-xl {
   margin: 2em;
+}
+
+.margin-top-1 {
+  margin-top: 1em;
+}
+
+.margin-bottom-1 {
+  margin-bottom: 1em;
+}
+
+.margin-left-1 {
+  margin-left: 1em;
+}
+
+.margin-right-1 {
+  margin-right: 1em;
+}
+
+.margin-horizontal-1 {
+  margin-left: 1em;
+  margin-right: 1em;
+}
+
+.margin-vertical-1 {
+  margin-top: 1em;
+  margin-bottom: 1em;
+}
+
+.margin-1 {
+  margin: 1em;
+}
+
+.margin-top-2 {
+  margin-top: 2em;
+}
+
+.margin-bottom-2 {
+  margin-bottom: 2em;
+}
+
+.margin-left-2 {
+  margin-left: 2em;
+}
+
+.margin-right-2 {
+  margin-right: 2em;
+}
+
+.margin-horizontal-2 {
+  margin-left: 2em;
+  margin-right: 2em;
+}
+
+.margin-vertical-2 {
+  margin-top: 2em;
+  margin-bottom: 2em;
+}
+
+.margin-2 {
+  margin: 2em;
+}
+
+.margin-top-3 {
+  margin-top: 3em;
+}
+
+.margin-bottom-3 {
+  margin-bottom: 3em;
+}
+
+.margin-left-3 {
+  margin-left: 3em;
+}
+
+.margin-right-3 {
+  margin-right: 3em;
+}
+
+.margin-horizontal-3 {
+  margin-left: 3em;
+  margin-right: 3em;
+}
+
+.margin-vertical-3 {
+  margin-top: 3em;
+  margin-bottom: 3em;
+}
+
+.margin-3 {
+  margin: 3em;
+}
+
+.margin-top-4 {
+  margin-top: 4em;
+}
+
+.margin-bottom-4 {
+  margin-bottom: 4em;
+}
+
+.margin-left-4 {
+  margin-left: 4em;
+}
+
+.margin-right-4 {
+  margin-right: 4em;
+}
+
+.margin-horizontal-4 {
+  margin-left: 4em;
+  margin-right: 4em;
+}
+
+.margin-vertical-4 {
+  margin-top: 4em;
+  margin-bottom: 4em;
+}
+
+.margin-4 {
+  margin: 4em;
+}
+
+.margin-top-5 {
+  margin-top: 5em;
+}
+
+.margin-bottom-5 {
+  margin-bottom: 5em;
+}
+
+.margin-left-5 {
+  margin-left: 5em;
+}
+
+.margin-right-5 {
+  margin-right: 5em;
+}
+
+.margin-horizontal-5 {
+  margin-left: 5em;
+  margin-right: 5em;
+}
+
+.margin-vertical-5 {
+  margin-top: 5em;
+  margin-bottom: 5em;
+}
+
+.margin-5 {
+  margin: 5em;
 }
 
 .content-column, .flex-column-right, .flex-column-left, .flex-column-end-right, .flex-column-end-left, .flex-column-end, .flex-column-center-right, .flex-column-center-left, .flex-column-center, .flex-column-start-right, .flex-column-start-left, .flex-column-start, .flex-column {
