--- a/stylesheets/style.css
+++ b/stylesheets/style.css
@@ -1,3 +1,7 @@
+.button, .button-expand {
+  cursor: pointer;
+}
+
 .padding-top-s {
   padding-top: 0.5em;
 }
@@ -1131,11 +1135,10 @@ h4.dark, .h4-text.dark {
   }
 }
 .button, .button-expand {
-  width: 5em;
-  height: 5em;
-  cursor: pointer;
   border: 0px;
   border-radius: 3px;
+  width: 5em;
+  height: 5em;
 }
 
 .button-expand {
