--- a/stylesheets/style.css
+++ b/stylesheets/style.css
@@ -1063,6 +1063,106 @@ h4.dark, .h4-text.dark {
   box-shadow: gray -5px 0px 7px 0px;
 }
 
+.shadow-inset-1 {
+  box-shadow: gray 0px 0px 3px 0px inset;
+}
+
+.shadow-inset-up-1 {
+  box-shadow: gray 0px -1px 3px 0px inset;
+}
+
+.shadow-inset-down-1 {
+  box-shadow: gray 0px 1px 3px 0px inset;
+}
+
+.shadow-inset-right-1 {
+  box-shadow: gray 1px 0px 3px 0px inset;
+}
+
+.shadow-inset-left-1 {
+  box-shadow: gray -1px 0px 3px 0px inset;
+}
+
+.shadow-inset-2 {
+  box-shadow: gray 0px 0px 4px 0px inset;
+}
+
+.shadow-inset-up-2 {
+  box-shadow: gray 0px -2px 4px 0px inset;
+}
+
+.shadow-inset-down-2 {
+  box-shadow: gray 0px 2px 4px 0px inset;
+}
+
+.shadow-inset-right-2 {
+  box-shadow: gray 2px 0px 4px 0px inset;
+}
+
+.shadow-inset-left-2 {
+  box-shadow: gray -2px 0px 4px 0px inset;
+}
+
+.shadow-inset-3, .button.active, .button:active, .active.button-expand, .button-expand:active {
+  box-shadow: gray 0px 0px 5px 0px inset;
+}
+
+.shadow-inset-up-3 {
+  box-shadow: gray 0px -3px 5px 0px inset;
+}
+
+.shadow-inset-down-3 {
+  box-shadow: gray 0px 3px 5px 0px inset;
+}
+
+.shadow-inset-right-3 {
+  box-shadow: gray 3px 0px 5px 0px inset;
+}
+
+.shadow-inset-left-3 {
+  box-shadow: gray -3px 0px 5px 0px inset;
+}
+
+.shadow-inset-4 {
+  box-shadow: gray 0px 0px 6px 0px inset;
+}
+
+.shadow-inset-up-4 {
+  box-shadow: gray 0px -4px 6px 0px inset;
+}
+
+.shadow-inset-down-4 {
+  box-shadow: gray 0px 4px 6px 0px inset;
+}
+
+.shadow-inset-right-4 {
+  box-shadow: gray 4px 0px 6px 0px inset;
+}
+
+.shadow-inset-left-4 {
+  box-shadow: gray -4px 0px 6px 0px inset;
+}
+
+.shadow-inset-5, .button:hover.active, .button-expand:hover.active {
+  box-shadow: gray 0px 0px 7px 0px inset;
+}
+
+.shadow-inset-up-5 {
+  box-shadow: gray 0px -5px 7px 0px inset;
+}
+
+.shadow-inset-down-5 {
+  box-shadow: gray 0px 5px 7px 0px inset;
+}
+
+.shadow-inset-right-5 {
+  box-shadow: gray 5px 0px 7px 0px inset;
+}
+
+.shadow-inset-left-5 {
+  box-shadow: gray -5px 0px 7px 0px inset;
+}
+
 .gradient, .gradient-hover-animation {
   background: linear-gradient(135deg, #ffffff00, #e9e9e980 25%, #ffffff00);
 }
@@ -1140,7 +1240,6 @@ h4.dark, .h4-text.dark {
   width: 5em;
   height: 5em;
 }
-
 .button-expand {
   position: relative;
   animation: animation-shrink 0.2s ease forwards;
